compiler/testData/diagnostics/testsWithStdLib/labelClashes.diag.txt
/labelClashes.kt:53:23: error: unresolved reference: length
            this@with.length
                      ^^^^^^

